# void_rush

./: .gitignore  About - How To Play.rtf  About - Lore and Features.rtf  Copy content to keybindings....json  Credits.txt  README.md  Setting.data  imgui.ini  void_rush.code-workspace  void_rush.sln  void_rush_cppcheck.cppcheck
void_rush/: .clang-format  .clang-tidy  .clangd  3DTextPS.hlsl  BillBoardGeometryShader.hlsl  CMakeLists special...txt  CMakeLists.txt  Makefile  NoShadowPS.hlsl  RCa16528  compile_then_create_graph.bat  create_graph(visualStudio).bat  create_graph.bat  create_graph.sh  nordström.ods  resource.h  void_rush.rc  void_rush.vcxproj  void_rush.vcxproj.filters  void_rush.vcxproj.filters 2  whatever2.csv
void_rush/.scripts/: gen_compiler_database.bat
void_rush/proto_outputs/: SkissV2.ggb  create_graph.bat  debugoutput.txt  graph.dot  the_spreadsheet.ods  whatever.csv  whatever2.csv
void_rush/src/: HighScoreGameState.cpp  HighScoreGameState.h  Jump.hpp  Main.cpp  Mushroom.cpp  Mushroom.h  Platform.h  SettingsScene.cpp  SettingsScene.h  Snare.cpp  Snare.h  Spikes.h  Turret.cpp  Turret.h  Vector.hpp  player.cpp  player.h  settings.cpp  settings.h
void_rush/src/3Dproj/: 3DLetters.cpp  3DLetters.h  3DLettersHandler.cpp  3DLettersHandler.h  3DTextPS.hlsl  3DTextVS.hlsl  App.cpp  App.h  BillBoardManager.cpp  Camera.cpp  Camera.h  Collision.h  Collision3D.cpp  Collision3D.h  CollisionHandler.cpp  CollisionHandler.h  Convertions.cpp  Convertions.h  D311Helper.cpp  DynamicCubeEnviroment.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GameState.cpp  GameState.h  GeometryShader.hlsl  Ghost.cpp  Ghost.h  Graphics.cpp  Graphics.h  Keyboard.cpp  Keyboard.h  Light.cpp  Light.h  Material.cpp  (+61 more)
void_rush/src/common/: Helper.cpp  Helper.h  Helper.hpp  Matrix.hpp  Shape.cpp  Shape.hpp  Shape_exporter.cpp  Shape_exporter.hpp  Vector.cpp  Vector.hpp
void_rush/src/enemies/: Enemy.h  EnemyManager.cpp  EnemyManager.hpp  EnemySettings.hpp  FallingPlatform.cpp  FallingPlatform.h  Ghost.cpp  Ghost.h  Mushroom.cpp  Mushroom.h  Projectile.cpp  Snare.cpp  Snare.h  Spikes.cpp  Spikes.h  Turret.cpp  Turret.h
void_rush/src/generation/: Generate.cpp  Generate.h  Generate.hpp  Generation_manager.cpp  Generation_manager.h  Generation_manager.hpp  Platform.cpp  Platform.h  Platform.hpp  Player_jump_checker.cpp  Player_jump_checker.hpp  Position_generator.cpp  Position_generator.hpp  player.cpp  player.h  player.hpp  playerGen.cpp  playerGen.hpp  proto.hpp
(+80 files in other folders)
